# calc_test_doctest

./: CMakeLists.txt  README.md
src/: mycalc.h
test/: test_calc1.cpp  test_calc2.cpp  test_calc3.cpp
